--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: DMsans-Regular;
-  src: url(assets/fonts/static/DMSans-Regular.ttf);
+  src: url(DMSans-Regular.ttf);
 }
 
 * {
